# atlas-workbench

./: .gitignore  AGENTS.md  CHECKPOINTS.md  HANDOFF.md  ROADMAP.md  VERIFY_HANDOFF.md  feature_list.json  ground-rules.md  index.html  init.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.json  verify.sh  vite.config.ts
.clinerules/: dark-factory.md
docs/: acceptance.md  acceptance_contract.json  architecture.json  architecture.md  conventions.md  intent_ledger.md  mission_control.md  operating_model.md  product_constitution.json  product_constitution.md  specs.md  verification.md
packaging/: atlas-workbench.desktop
prompts/: contract-auditor.txt  implementer.txt  implementer_retry.txt  product-owner.txt  red-team-reviewer.txt  reviewer.txt  test-strategist.txt
scripts/: atlas-gateway.mjs  atlas-llama-server.mjs
specs/: feature-binary-config.md  feature-error-handling.md  feature-fine-tuning.md  feature-model-management.md  feature-server-control.md  feature-settings-flags.md  feature-system-monitor.md
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tests/: backend.test.ts  binaryValidation.test.ts  cliSnippets.test.ts  compression.test.ts  config.test.ts  controller.test.ts  errorMapper.test.ts  flagBuilder.test.ts  gateway.test.ts  headlessGateway.test.ts  healthWatchdog.test.ts  monitor.test.ts  processManager.test.ts  runtimeProfiles.test.ts  tauriCapabilities.test.ts  tokenBudget.test.ts  transport.test.ts
verification/: final_gauntlet.md  (+2 more)
(+96 files in other folders)
